# drf-api-deploy

./: db.sqlite3  heroku.yml  pyproject.toml  requirements.txt
books/: models.py  permissions.py  serializer.py  urls.py  views.py
books/migrations/: 0001_initial.py
bookshop/: settings.py  urls.py
